# JazzGrooveAnalyzer

./: .gitignore  JGA_BOOTSTRAP.md  README.md  pyproject.toml
docs/: CHANGELOG.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  JGA_ARCHITECTURE.md  JGA_DECISIONS.md  JGA_DEVELOPMENT_CONSTITUTION.md  JGA_DOMAIN_MAP.md  JGA_DOMAIN_MODEL.md  JGA_GLOSSARY.md  JGA_METHOD.md  JGA_METRIC_STABILITY_MODEL.md  JGA_PRINCIPLES.md  JGA_PROJECT_STATE.md  JGA_RESEARCH_JOURNAL.md  JGA_ROADMAP.md  JGA_SESSION_CONTEXT.md  JGA_T4_SPECIFICATION.md  JGA_THEORETICAL_FRAMEWORK.md  MASTER_CONVERSATIONS.md  README.md  ROADMAP.md
docs/DSP/: DSP_001.md  DSP_002.md  DSP_003.md  DSP_004.md  DSP_005.md  DSP_006.md  DSP_007.md  DSP_008.md  DSP_009.md
docs/FOUNDATIONS/: FOUNDATIONS_OF_JGA.md  JGA_GLOSSARY.md
docs/MATHEMATICS/: JGA_MATH_001.md  JGA_MATH_002.md  JGA_MATH_003.md  JGA_MATH_004.md  JGA_MATH_005.md  JGA_MATH_006.md  JGA_MATH_007.md  JGA_MATH_008.md  JGA_MATH_009.md  JGA_MATH_010.md  JGA_MATH_011.md
docs/TOOLCHAIN/: DEVELOPER_TOOLCHAIN.md
docs/architecture/: AD-016_BEHAVIOUR_ANALYTICS_OPERATOR_CONTRACT.md  CORE_DOMAIN_BOUNDARY.md  REPRESENTATION_QUANTIFICATION_ANALYTICS.md  REPRESENTATION_TRANSLATION.md
docs/core/: AUDIO_STEM_COLLECTION.md
docs/domain/: AnalysisReport.md  AudioRecording.md  AudioStem.md  BEHAVIOUR_CONTRACTS.md  BEHAVIOUR_DOMAIN_MAP.md  DOMAIN_MODEL_MAP.md  ElementaryMetricEvent.md  EnsembleProfile.md  InstrumentProfile.md  (+11 more)
src/: ._jga.egg-info
tests/: test_feature.py  test_onset.py  test_transient.py
tools/: bootstrap.py  run_pipeline.py  update_project_state.py
(+306 files in other folders)
