[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jga"
version = "0.1.0"
description = "Jazz Groove Analyzer"
authors = [
    { name = "Angelo Tracanna" }
]
requires-python = ">=3.13"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]